src/compiladorest3/SQLoopParser.java
// Generated from SQLoop.g4 by ANTLR 4.7
package compiladorest3;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SQLoopParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, PalavrasChave=29, IDENT=30, INTEIRO=31, 
		CADEIA=32, IGNORADOS=33, COMENTARIO=34, ERROR=35, COMENTARIO_ERRO=36;
	public static final int
		RULE_programa = 0, RULE_ddl = 1, RULE_declaracoes = 2, RULE_definicoes = 3, 
		RULE_def_metodos = 4, RULE_relacoes = 5, RULE_rel_def = 6, RULE_rel_metodos = 7, 
		RULE_dml = 8, RULE_comandos = 9, RULE_cmd = 10, RULE_insercao = 11, RULE_valores = 12, 
		RULE_valor = 13, RULE_valor_str = 14, RULE_valor_int = 15, RULE_valor_date = 16, 
		RULE_mais_valor = 17, RULE_consulta = 18, RULE_tabela = 19, RULE_variavel = 20, 
		RULE_var_int = 21, RULE_var_str = 22, RULE_var_date = 23;
	public static final String[] ruleNames = {
		"programa", "ddl", "declaracoes", "definicoes", "def_metodos", "relacoes", 
		"rel_def", "rel_metodos", "dml", "comandos", "cmd", "insercao", "valores", 
		"valor", "valor_str", "valor_int", "valor_date", "mais_valor", "consulta", 
		"tabela", "variavel", "var_int", "var_str", "var_date"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'@DDL'", "'@endDDL'", "'Table'", "'{'", "'}'", "'->'", "';'", "'aincrement'", 
		"'('", "')'", "'integer'", "'unsigned'", "'()'", "'string'", "'date'", 
		"'genTimestamps'", "'Relationships'", "'belongsTo'", "'@DML'", "'@endDML'", 
		"'='", "'['", "']'", "'''", "'-'", "','", "'where'", "'$'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, "PalavrasChave", "IDENT", "INTEIRO", "CADEIA", 
		"IGNORADOS", "COMENTARIO", "ERROR", "COMENTARIO_ERRO"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SQLoop.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SQLoopParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramaContext extends ParserRuleContext {
		public DdlContext ddl() {
			return getRuleContext(DdlContext.class,0);
		}
		public TerminalNode EOF() { return getToken(SQLoopParser.EOF, 0); }
		public DmlContext dml() {
			return getRuleContext(DmlContext.class,0);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLoopListener ) ((SQLoopListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLoopListener ) ((SQLoopListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLoopVisitor ) return ((SQLoopVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			ddl();
			setState(50);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__18) {
				{
				setState(49);
				dml();
				}
			}

			setState(52);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DdlContext extends ParserRuleContext {
		public DeclaracoesContext declaracoes() {
			return getRuleContext(DeclaracoesContext.class,0);
		}
		public DdlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ddl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLoopListener ) ((SQLoopListener)listener).enterDdl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLoopListener ) ((SQLoopListener)listener).exitDdl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLoopVisitor ) return ((SQLoopVisitor<? extends T>)visitor).visitDdl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DdlContext ddl() throws RecognitionException {
		DdlContext _localctx = new DdlContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_ddl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			match(T__0);
			setState(55);
			declaracoes();
			setState(56);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracoesContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(SQLoopParser.IDENT, 0); }
		public DefinicoesContext definicoes() {
			return getRuleContext(DefinicoesContext.class,0);
		}
		public RelacoesContext relacoes() {
			return getRuleContext(RelacoesContext.class,0);
		}
		public DeclaracoesContext declaracoes() {
			return getRuleContext(DeclaracoesContext.class,0);
		}
		public DeclaracoesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracoes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLoopListener ) ((SQLoopListener)listener).enterDeclaracoes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLoopListener ) ((SQLoopListener)listener).exitDeclaracoes(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLoopVisitor ) return ((SQLoopVisitor<? extends T>)visitor).visitDeclaracoes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracoesContext declaracoes() throws RecognitionException {
		DeclaracoesContext _localctx = new DeclaracoesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaracoes);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(T__2);
			setState(59);
			match(IDENT);
			setState(60);
			match(T__3);
			setState(61);
			definicoes();
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__16) {
				{
				setState(62);
				relacoes();
				}
			}

			setState(65);
			match(T__4);
			setState(67);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(66);
				declaracoes();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinicoesContext extends ParserRuleContext {
		public TabelaContext tabela() {
			return getRuleContext(TabelaContext.class,0);
		}
		public Def_metodosContext def_metodos() {
			return getRuleContext(Def_metodosContext.class,0);
		}
		public DefinicoesContext definicoes() {
			return getRuleContext(DefinicoesContext.class,0);
		}
		public DefinicoesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definicoes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLoopListener ) ((SQLoopListener)listener).enterDefinicoes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLoopListener ) ((SQLoopListener)listener).exitDefinicoes(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLoopVisitor ) return ((SQLoopVisitor<? extends T>)visitor).visitDefinicoes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefinicoesContext definicoes() throws RecognitionException {
		DefinicoesContext _localctx = new DefinicoesContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_definicoes);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			tabela();
			setState(70);
			match(T__5);
			setState(71);
			def_metodos();
			setState(72);
			match(T__6);
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__27) {
				{
				setState(73);
				definicoes();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Def_metodosContext extends ParserRuleContext {
		public Var_intContext var_int() {
			return getRuleContext(Var_intContext.class,0);
		}
		public Var_strContext var_str() {
			return getRuleContext(Var_strContext.class,0);
		}
		public Var_dateContext var_date() {
			return getRuleContext(Var_dateContext.class,0);
		}
		public Def_metodosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_def_metodos; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLoopListener ) ((SQLoopListener)listener).enterDef_metodos(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLoopListener ) ((SQLoopListener)listener).exitDef_metodos(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLoopVisitor ) return ((SQLoopVisitor<? extends T>)visitor).visitDef_metodos(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Def_metodosContext def_metodos() throws RecognitionException {
		Def_metodosContext _localctx = new Def_metodosContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_def_metodos);
		int _la;
		try {
			setState(102);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__7:
				enterOuterAlt(_localctx, 1);
				{
				setState(76);
				match(T__7);
				setState(77);
				match(T__8);
				setState(78);
				var_int();
				setState(79);
				match(T__9);
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 2);
				{
				setState(81);
				match(T__10);
				setState(82);
				match(T__8);
				setState(83);
				var_int();
				setState(84);
				match(T__9);
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__5) {
					{
					setState(85);
					match(T__5);
					setState(86);
					match(T__11);
					setState(87);
					match(T__12);
					}
				}

				}
				break;
			case T__13:
				enterOuterAlt(_localctx, 3);
				{
				setState(90);
				match(T__13);
				setState(91);
				match(T__8);
				setState(92);
				var_str();
				setState(93);
				match(T__9);
				}
				break;
			case T__14:
				enterOuterAlt(_localctx, 4);
				{
				setState(95);
				match(T__14);
				setState(96);
				match(T__8);
				setState(97);
				var_date();
				setState(98);
				match(T__9);
				}
				break;
			case T__15:
				enterOuterAlt(_localctx, 5);
				{
				setState(100);
				match(T__15);
				setState(101);
				match(T__12);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RelacoesContext extends ParserRuleContext {
		public Rel_defContext rel_def() {
			return getRuleContext(Rel_defContext.class,0);
		}
		public RelacoesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relacoes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLoopListener ) ((SQLoopListener)listener).enterRelacoes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLoopListener ) ((SQLoopListener)listener).exitRelacoes(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLoopVisitor ) return ((SQLoopVisitor<? extends T>)visitor).visitRelacoes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RelacoesContext relacoes() throws RecognitionException {
		RelacoesContext _localctx = new RelacoesContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_relacoes);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(T__16);
			setState(105);
			match(T__3);
			setState(106);
			rel_def();
			setState(107);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Rel_defContext extends ParserRuleContext {
		public TabelaContext tabela() {
			return getRuleContext(TabelaContext.class,0);
		}
		public Rel_metodosContext rel_metodos() {
			return getRuleContext(Rel_metodosContext.class,0);
		}
		public Rel_defContext rel_def() {
			return getRuleContext(Rel_defContext.class,0);
		}
		public Rel_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rel_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLoopListener ) ((SQLoopListener)listener).enterRel_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLoopListener ) ((SQLoopListener)listener).exitRel_def(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLoopVisitor ) return ((SQLoopVisitor<? extends T>)visitor).visitRel_def(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Rel_defContext rel_def() throws RecognitionException {
		Rel_defContext _localctx = new Rel_defContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_rel_def);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			tabela();
			setState(110);
			match(T__5);
			setState(111);
			rel_metodos();
			setState(112);
			match(T__6);
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__27) {
				{
				setState(113);
				rel_def();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Rel_metodosContext extends ParserRuleContext {
		public Var_strContext var_str() {
			return getRuleContext(Var_strContext.class,0);
		}
		public Rel_metodosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rel_metodos; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLoopListener ) ((SQLoopListener)listener).enterRel_metodos(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLoopListener ) ((SQLoopListener)listener).exitRel_metodos(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLoopVisitor ) return ((SQLoopVisitor<? extends T>)visitor).visitRel_metodos(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Rel_metodosContext rel_metodos() throws RecognitionException {
		Rel_metodosContext _localctx = new Rel_metodosContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_rel_metodos);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(T__17);
			setState(117);
			match(T__8);
			setState(118);
			var_str();
			setState(119);
			match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DmlContext extends ParserRuleContext {
		public ComandosContext comandos() {
			return getRuleContext(ComandosContext.class,0);
		}
		public DmlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dml; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLoopListener ) ((SQLoopListener)listener).enterDml(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLoopListener ) ((SQLoopListener)listener).exitDml(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLoopVisitor ) return ((SQLoopVisitor<? extends T>)visitor).visitDml(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DmlContext dml() throws RecognitionException {
		DmlContext _localctx = new DmlContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_dml);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(T__18);
			setState(122);
			comandos();
			setState(123);
			match(T__19);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComandosContext extends ParserRuleContext {
		public CmdContext cmd() {
			return getRuleContext(CmdContext.class,0);
		}
		public ComandosContext comandos() {
			return getRuleContext(ComandosContext.class,0);
		}
		public ComandosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comandos; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLoopListener ) ((SQLoopListener)listener).enterComandos(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLoopListener ) ((SQLoopListener)listener).exitComandos(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLoopVisitor ) return ((SQLoopVisitor<? extends T>)visitor).visitComandos(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComandosContext comandos() throws RecognitionException {
		ComandosContext _localctx = new ComandosContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_comandos);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			cmd();
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__27) {
				{
				setState(126);
				comandos();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdContext extends ParserRuleContext {
		public TabelaContext tabela() {
			return getRuleContext(TabelaContext.class,0);
		}
		public InsercaoContext insercao() {
			return getRuleContext(InsercaoContext.class,0);
		}
		public ConsultaContext consulta() {
			return getRuleContext(ConsultaContext.class,0);
		}
		public CmdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLoopListener ) ((SQLoopListener)listener).enterCmd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLoopListener ) ((SQLoopListener)listener).exitCmd(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLoopVisitor ) return ((SQLoopVisitor<? extends T>)visitor).visitCmd(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CmdContext cmd() throws RecognitionException {
		CmdContext _localctx = new CmdContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_cmd);
		try {
			setState(138);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(129);
				tabela();
				setState(130);
				match(T__20);
				setState(131);
				insercao();
				setState(132);
				match(T__6);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(134);
				tabela();
				setState(135);
				consulta();
				setState(136);
				match(T__6);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InsercaoContext extends ParserRuleContext {
		public ValoresContext valores() {
			return getRuleContext(ValoresContext.class,0);
		}
		public InsercaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_insercao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLoopListener ) ((SQLoopListener)listener).enterInsercao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLoopListener ) ((SQLoopListener)listener).exitInsercao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLoopVisitor ) return ((SQLoopVisitor<? extends T>)visitor).visitInsercao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InsercaoContext insercao() throws RecognitionException {
		InsercaoContext _localctx = new InsercaoContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_insercao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			match(T__21);
			setState(141);
			valores();
			setState(142);
			match(T__22);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValoresContext extends ParserRuleContext {
		public ValorContext valor() {
			return getRuleContext(ValorContext.class,0);
		}
		public Mais_valorContext mais_valor() {
			return getRuleContext(Mais_valorContext.class,0);
		}
		public ValoresContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valores; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLoopListener ) ((SQLoopListener)listener).enterValores(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLoopListener ) ((SQLoopListener)listener).exitValores(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLoopVisitor ) return ((SQLoopVisitor<? extends T>)visitor).visitValores(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ValoresContext valores() throws RecognitionException {
		ValoresContext _localctx = new ValoresContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_valores);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			valor();
			setState(146);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(145);
				mais_valor();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValorContext extends ParserRuleContext {
		public Valor_strContext valor_str() {
			return getRuleContext(Valor_strContext.class,0);
		}
		public Valor_intContext valor_int() {
			return getRuleContext(Valor_intContext.class,0);
		}
		public Valor_dateContext valor_date() {
			return getRuleContext(Valor_dateContext.class,0);
		}
		public ValorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLoopListener ) ((SQLoopListener)listener).enterValor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLoopListener ) ((SQLoopListener)listener).exitValor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLoopVisitor ) return ((SQLoopVisitor<? extends T>)visitor).visitValor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ValorContext valor() throws RecognitionException {
		ValorContext _localctx = new ValorContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_valor);
		try {
			setState(151);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(148);
				valor_str();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(149);
				valor_int();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(150);
				valor_date();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
